moved all typeclasses to separate file

--- a/search-project.cabal
+++ b/search-project.cabal
@@ -29,6 +29,7 @@ library
       PageRankLib
       ParseLib
       SearchLib
+      TypeClassesLib
   other-modules:
       Paths_search_project
   hs-source-dirs:
